[metadata]
name = imaging_pipeline
version = 0.1.0
author = Martin Haesemeyer
author_email = m.haesemeyer@gmail.com
description = Package to analyze 2P data with CAIMAN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haesemeyer/imaging_pipeline
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = imaging_pipeline
packages = find:
python_requires = ==3.7.*

[options.packages.find]
where = imaging_pipeline